--- a/first project/package.json
+++ b/first project/package.json
@@ -7,6 +7,9 @@
   },
   "devDependencies": {
     "css-loader": "^1.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "less": "^3.7.1",
     "less-loader": "^4.1.0",
